# sui-lang

./: .gitignore  README.md  README_ja.md  STRATEGY.md  py2sui.py  pyproject.toml  sui.py  sui2py.py  sui2wat.py  suiwasm.py
.github/workflows/: release.yml  test.yml
examples/: args_demo.sui  ffi_demo.sui  fib_args.sui  fibonacci.sui  fizzbuzz.sui  list_sum.sui
examples/counter_app/: README.md  README_ja.md  standalone.html
prompts/: examples.md  system_prompt.md  system_prompt_en.md  system_prompt_ja.md
tests/: __init__.py  test_interpreter.py  test_repl.py  test_transpiler.py  test_wat_transpiler.py
