[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sui-lang"
version = "0.2.2"
description = "A programming language optimized for LLM code generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sui Contributors"}
]
keywords = ["programming-language", "llm", "code-generation", "interpreter", "transpiler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
]

[project.urls]
Homepage = "https://github.com/TakatoHonda/sui-lang"
Repository = "https://github.com/TakatoHonda/sui-lang"
Issues = "https://github.com/TakatoHonda/sui-lang/issues"

[project.scripts]
sui = "sui:main"
sui2py = "sui2py:main"
sui2wat = "sui2wat:main"
suiwasm = "suiwasm:main"
py2sui = "py2sui:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
wasm = [
    "wasmtime>=39.0",
]

[tool.setuptools]
py-modules = ["sui", "sui2py", "sui2wat", "suiwasm", "py2sui"]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

